--- a/src/Tasks/Microsoft.NET.Build.Tasks/targets/Microsoft.NET.Sdk.DefaultItems.targets
+++ b/src/Tasks/Microsoft.NET.Build.Tasks/targets/Microsoft.NET.Sdk.DefaultItems.targets
@@ -153,4 +153,15 @@ Copyright (c) .NET Foundation. All rights reserved.
     <NETSdkWarning ResourceName="UnnecessaryWindowsDesktopSDK" />
   </Target>
 
+  <!-- This verifies that the configuration between projects in a solution set by PackRelease agree.
+  PackRelease only affects the CLI since VS has its own Configuration UI and it's not possible to detect like this in MSBuild.
+  _IsPacking will only be set if packing in the CLI, so that's fine here. The pack targets are all outside of the SDK, which is why this is here.-->
+  <Target Name="_VerifyPackReleaseConfigurations"
+          BeforeTargets="PrepareForBuild"
+          Condition="'$(_IsPacking)' == 'true'">
+    <NETSdkError Condition="'$(_SolutionLevelPackRelease)' != '' and '$(_SolutionLevelPackRelease)' != '$(PackRelease)'"
+                  ResourceName="SolutionProjectConfigurationsConflict"
+                  FormatArguments="PackRelease"/>
+  </Target>
+  
 </Project>
