--- a/.vsts-dotnet.yml
+++ b/.vsts-dotnet.yml
@@ -231,7 +231,7 @@ stages:
       dependsOn:
         - Windows_NT
       pool:
-        vmImage: vs2017-win2016
+        vmImage: windows-latest
 
 - ${{ if and(ne(variables['System.TeamProject'], 'public'), notin(variables['Build.Reason'], 'PullRequest')) }}:
   - template: eng\common\templates\post-build\post-build.yml
