--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,8 +30,6 @@ jobs:
         uses: actions/checkout@v2
       - name: Build
         run: .\build.cmd -test
-      - name: connect with upterm
-        uses: lhotari/action-upterm@v1
 
   build:
     if: github.event_name == 'push' || github.event.pull_request.head.repo.id != github.event.pull_request.base.repo.id
@@ -44,6 +42,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Build
-        run: ./build.sh --test   
+        run: ./build.sh --test
+
+  upterm:
+    steps:
       - name: connect with upterm
         uses: lhotari/action-upterm@v1
