--- a/src/Assets/TestProjects/CppCliLibWithWpfFrameworkReference/Project1.vcxproj
+++ b/src/Assets/TestProjects/CppCliLibWithWpfFrameworkReference/Project1.vcxproj
@@ -18,6 +18,9 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup Label="ProjectConfigurations">
+    <PackageReference Include="NewtonSoft.Json" Version="13.0.1" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <ProjectGuid>{C57C3445-CDFD-46AA-9F20-445721AA799B}</ProjectGuid>
@@ -25,6 +28,7 @@
     <RootNamespace>Project1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
     <TargetFramework>net8.0</TargetFramework>
+    <EnableManagedpackageReferenceSupport>true</EnableManagedpackageReferenceSupport>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
