--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -56,8 +56,7 @@
     <GenerateResourceMSBuildArchitecture>CurrentArchitecture</GenerateResourceMSBuildArchitecture>
     <GenerateResourceMSBuildRuntime>CurrentRuntime</GenerateResourceMSBuildRuntime>
 
-    <!-- This should be unconditional but helps until https://github.com/dotnet/msbuild/pull/8236 gets us a Roslyn dependency-dll fix. -->
-    <EnforceCodeStyleInBuild Condition="'$(MSBuildRuntimeType)' == 'Core'">true</EnforceCodeStyleInBuild>
+    <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
 
     <PackageLicenseUrl Condition="'$(PackageLicenseExpression)' == ''">http://go.microsoft.com/fwlink/?LinkId=329770</PackageLicenseUrl>
