--- a/src/Tasks/Microsoft.NET.Build.Tasks/targets/Microsoft.NET.Sdk.DefaultItems.targets
+++ b/src/Tasks/Microsoft.NET.Build.Tasks/targets/Microsoft.NET.Sdk.DefaultItems.targets
@@ -153,15 +153,24 @@ Copyright (c) .NET Foundation. All rights reserved.
     <NETSdkWarning ResourceName="UnnecessaryWindowsDesktopSDK" />
   </Target>
 
+  <!-- Default the value of PackRelease for 8.0+ TFMs. Note that this is pre-evaluated by the CLI in an evaluation before evaluation (see ReleasePropertyProjectLocator.cs).-->
+  <PropertyGroup Condition="'$(PackRelease)' == '' and '$(_TargetFrameworkVersionWithoutV)' >= '8.0'">
+    <PackRelease>true</PackRelease>
+    <_PackReleaseAutomaticallyInferred>true</_PackReleaseAutomaticallyInferred>
+  </PropertyGroup>
+
   <!-- This verifies that the configuration between projects in a solution set by PackRelease agree.
   PackRelease only affects the CLI since VS has its own Configuration UI and it's not possible to detect like this in MSBuild.
   _IsPacking will only be set if packing in the CLI, so that's fine here. The pack targets are all outside of the SDK, which is why this is here.-->
   <Target Name="_VerifyPackReleaseConfigurations"
           BeforeTargets="PrepareForBuild"
           Condition="'$(_IsPacking)' == 'true'">
-    <NETSdkError Condition="'$(_SolutionLevelPackRelease)' != '' and '$(_SolutionLevelPackRelease)' != '$(PackRelease)'"
-                  ResourceName="SolutionProjectConfigurationsConflict"
-                  FormatArguments="PackRelease"/>
+    <NETSdkError Condition="'$(_SolutionLevelPackRelease)' != '' and
+                            '$(_SolutionLevelPackRelease)' != '$(PackRelease)' and
+                            '$(PackRelease)' != '' and
+                            '$(_PackReleaseAutomaticallyInferred)' != 'true'"
+          ResourceName="SolutionProjectConfigurationsConflict"
+          FormatArguments="PackRelease"/>
   </Target>
-  
+
 </Project>
