--- a/src/MSBuildTaskHost/MSBuildTaskHost.csproj
+++ b/src/MSBuildTaskHost/MSBuildTaskHost.csproj
@@ -43,6 +43,9 @@
     <Compile Include="..\Framework\EnvironmentVariableReadEventArgs.cs">
       <Link>EnvironmentVariableReadEventArgs.cs</Link>
     </Compile>
+    <Compile Include="..\Framework\AssemblyLoadBuildEventArgs.cs">
+      <Link>AssemblyLoadBuildEventArgs.cs</Link>
+    </Compile>
     <Compile Include="..\Framework\BuildEnvironmentState.cs">
       <Link>BuildEnvironmentState.cs</Link>
     </Compile>
